--- a/style.scss
+++ b/style.scss
@@ -10,6 +10,14 @@
 }
 
 @import'mixins';
+summary {
+    display: block;
+}
+
+summary::-webkit-details-marker {
+    display: none;
+}
+
 body {
     font-family: 'Lato', sans-serif;
 }
@@ -29,14 +37,43 @@ a {
     background-color: $backBlock;
     padding-top: 20px;
     padding-bottom: 20px;
-    @extend %flex;
-}
-
-.header__left {
     display: flex;
     align-items: center;
-    gap: 41px;
+    flex-wrap: wrap;
     @extend %flex;
+    justify-content: space-between;
+    &__left {
+        display: flex;
+        align-items: center;
+        gap: 41px;
+        @extend %flex;
+    }
+    position: relative;
+}
+
+#burger {
+    position: absolute;
+    left: -999999px;
+    visibility: hidden;
+    &:checked~.nav {
+        right: -$widthBurgerMenu;
+    }
+}
+
+.box-content {
+    overflow: hidden;
+}
+
+.nav {
+    background: #FFFFFF;
+    box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+    width: 232px;
+    padding: 32px;
+    box-sizing: border-box;
+    position: absolute;
+    top: 80px;
+    right: 0px;
+    transition: right .3s;
 }
 
 .top-head {
@@ -46,14 +83,134 @@ a {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    &__heading {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 24px;
+        line-height: 29px;
+        color: $colorSelectSite;
+    }
 }
 
-.top-head__heading {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 29px;
-    color: $colorSelectSite;
+.filter-sort {
+    height: 132px;
+    padding-top: 39px;
+    box-sizing: border-box;
+    position: relative;
+    display: flex;
+    gap: $gapGrid;
+}
+
+.filter {
+    padding-top: 13px;
+    width: 360px;
+    box-sizing: border-box;
+    position: relative;
+    z-index: 10;
+    &__content {
+        background-color: #fff;
+        padding-top: 0;
+        padding-right: 16px;
+        padding-bottom: 16px;
+        padding-left: 16px;
+    }
+    &[open] {
+        background: #FFFFFF;
+        box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+    }
+    &[open] .filter__heading {
+        color: $colorSelectSite;
+    }
+    &[open] path {
+        fill: $colorSelectSite;
+    }
+    &__summary {
+        display: flex;
+        align-items: center;
+        gap: 11px;
+        padding-left: 16px;
+    }
+    &__heading {
+        font-style: normal;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 17px;
+        color: $colorText;
+    }
+    &__item {
+        margin-top: 16px;
+    }
+    &__head {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17px;
+        color: #6F6E6E;
+        padding: 8px 11px 11px 11px;
+        border-bottom: 1px solid #EBEBEB;
+        border-left: 5px solid $colorSelectSite;
+    }
+    &__link-box {
+        display: flex;
+        flex-direction: column;
+        gap: 11px;
+        padding: 24px 16px;
+    }
+    &__link {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17px;
+        color: #6F6E6E;
+        &:hover {
+            color: $colorSelectSite;
+        }
+    }
+    &__item[open] .filter__head {
+        color: $colorSelectSite;
+    }
+}
+
+.sort {
+    padding-top: 12px;
+    display: flex;
+    gap: 18px;
+    &__details {
+        position: relative;
+    }
+    &__summary {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+    &__heading {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17px;
+        color: #6F6E6E;
+    }
+    &__box {
+        background: #FFFFFF;
+        box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+        padding: 7px 30px 11px 9px;
+        position: absolute;
+        left: -9px;
+        top: 22px;
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+    }
+    &__check {
+        display: flex;
+        gap: 9px;
+        align-items: center;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 16px;
+        color: #6F6E6E;
+    }
 }
 
 .breadcrumbs__link {
@@ -62,24 +219,19 @@ a {
     font-size: 14px;
     line-height: 17px;
     color: 636363;
-}
-
-.breadcrumbs__link_site {
-    font-weight: 400;
-    color: $colorSelectSite;
+    &_site {
+        font-weight: 400;
+        color: $colorSelectSite;
+    }
 }
 
 .product-box {
     @include centerflex();
-}
-
-%flex {
-    display: flex;
-    flex-wrap: wrap;
+    gap: $gapGrid;
 }
 
 .product {
-    width: $thirdSite;
+    width: 360px;
     display: flex;
     flex-direction: column;
     &__img {
@@ -113,4 +265,9 @@ a {
         line-height: 19px;
         color: $colorSelectSite;
     }
+}
+
+%flex {
+    display: flex;
+    flex-wrap: wrap;
 }
